finally centered the damned thing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-  <center><p class="borderexample">CAPCOM</p></center>
+  <div style="display:flex;justify-content:center;align-items:center;height:100%"><p class="borderexample">CAPCOM</p></div>
   </body>
 </html>
